--- a/catkin_ws/src/jupyter/voc seg.ipynb
+++ b/catkin_ws/src/jupyter/voc seg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
     "file_list = os.listdir(ann_root)\n",
     "all_file = open(root + \"all.txt\", \"w\")\n",
     "train_file = open(root + \"train.txt\", \"w\")\n",
-    "test_file = open(root + \"test.txt\", \"w\")\n",
+    "test_file = open(root + \"val.txt\", \"w\")\n",
     "ratio = 0.9\n",
     "count = 0\n",
     "pick = []\n",
@@ -257,9 +257,9 @@
     "    pick.append(idx)\n",
     "    all_file.write(file_list[idx]+'\\n')\n",
     "    if count < len(file_list)*ratio:\n",
-    "        train_file.write(file_list[idx]+'\\n')\n",
+    "        train_file.write(file_list[idx][:-4]+'\\n')\n",
     "    else:\n",
-    "        test_file.write(file_list[idx]+'\\n')   \n",
+    "        test_file.write(file_list[idx][:-4]+'\\n')   \n",
     "    count = count + 1\n",
     "all_file.close()\n",
     "train_file.close()\n",
