--- a/catkin_ws/src/jupyter/SubT data create mask with class.ipynb
+++ b/catkin_ws/src/jupyter/SubT data create mask with class.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,6 +306,93 @@
     "            img = img[:,:,2]\n",
     "            cv2.imwrite(fcn_data_path, img)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Generate csv file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "extinguisher/scene000008/12.jpg\n",
+      "extinguisher/scene000016/10.jpg\n"
+     ]
+    }
+   ],
+   "source": [
+    "fcn_subt_root = '/media/arg_ws3/5E703E3A703E18EB/data/subt_all/'\n",
+    "image_root = \"/media/arg_ws3/5E703E3A703E18EB/data/subt_all/image/\"\n",
+    "fcn_mask_root = \"/media/arg_ws3/5E703E3A703E18EB/data/subt_all/fcn_mask/\"\n",
+    "data_list = []\n",
+    "ratio = 0.9\n",
+    "training_list = []\n",
+    "test_list = []\n",
+    "count = 0\n",
+    "for obj in os.listdir(image_root):\n",
+    "    scene_path = os.path.join(image_root, obj)\n",
+    "    fcn_scene_path = os.path.join(fcn_mask_root, obj)\n",
+    "    scene_list = os.listdir(scene_path)\n",
+    "    for scene in scene_list:\n",
+    "        img_path = os.path.join(scene_path, scene)\n",
+    "        fcn_img_path = os.path.join(fcn_scene_path, scene)\n",
+    "        img_list = os.listdir(img_path)\n",
+    "        for img in img_list:\n",
+    "            file_path = os.path.join(img_path, img)\n",
+    "            fcn_file_path = os.path.join(fcn_img_path, img.split('.jpg')[0] + '.png')\n",
+    "            if os.path.exists(file_path) and os.path.exists(fcn_file_path):\n",
+    "                data_list.append(obj+'/'+scene+'/'+img)\n",
+    "            else:\n",
+    "                print(obj+'/'+scene+'/'+img)\n",
+    "random.shuffle(data_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for data in data_list:\n",
+    "    if count < len(data_list)*ratio:\n",
+    "        training_list.append(data)\n",
+    "    else:\n",
+    "        test_list.append(data)\n",
+    "    count = count + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(fcn_subt_root + 'train.csv', 'w', newline='') as csvfile:\n",
+    "    writer = csv.writer(csvfile)\n",
+    "    for image in training_list:\n",
+    "        mask_name = image.split(\".jpg\")[0] + \".png\"\n",
+    "        writer.writerow([\"image/\" + image, \"fcn_mask/\" + mask_name])\n",
+    "with open(fcn_subt_root + 'test.csv', 'w', newline='') as csvfile:\n",
+    "    writer = csv.writer(csvfile)\n",
+    "    for image in test_list:\n",
+    "        mask_name = image.split(\".jpg\")[0] + \".png\"\n",
+    "        writer.writerow([\"image/\" + image, \"fcn_mask/\" + mask_name])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
