gan training and evaluate

--- a/catkin_ws/src/jupyter/box gan.ipynb
+++ b/catkin_ws/src/jupyter/box gan.ipynb
@@ -34,11 +34,11 @@
     "G_AB = GeneratorResNet(res_blocks=9)\n",
     "if cuda:\n",
     "    G_AB = G_AB.cuda()\n",
-    "G_AB.load_state_dict(torch.load('/media/arg_ws3/5E703E3A703E18EB/research/cycle_box_sim2real/saved_models/box_sim2real_new/G_AB_579700_.pth'))\n",
+    "G_AB.load_state_dict(torch.load('/media/arg_ws3/5E703E3A703E18EB/research/cycle_box_sim2real/saved_models/box_sim2real_G_LAMDAID_1/G_AB_1031525_.pth'))\n",
     "Tensor = torch.cuda.FloatTensor if cuda else torch.Tensor\n",
     "\n",
     "data_transform = transforms.Compose(\n",
-    "                [ transforms.Resize(int(480), Image.BICUBIC),\n",
+    "                [ transforms.Resize((240, 320), Image.BICUBIC),\n",
     "                #transforms.RandomCrop((opt.img_height, opt.img_width)),\n",
     "                #transforms.RandomHorizontalFlip(),\n",
     "                transforms.ToTensor(),\n",
@@ -142,19 +142,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sample_images(image):\n",
+    "def sample_images(path):\n",
     "    \"\"\"Saves a generated sample from the test set\"\"\"\n",
     "    #imgs = next(iter(val_dataloader))\n",
     "    #image = cv2.imread(\"/media/arg_ws3/5E703E3A703E18EB/data/mm_unity/unity_boxes/box_108/Scene65/11_original.png\")\n",
-    "    image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
-    "    pil_im = Image.fromarray(image)\n",
-    "    pil_im = data_transform(pil_im)\n",
+    "    #image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
+    "    image = Image.open(path)\n",
+    "    #pil_im = Image.fromarray(image)\n",
+    "    pil_im = data_transform(image)\n",
     "    pil_im = pil_im.unsqueeze(0)\n",
     "\n",
-    "    image = cv2.resize(image, (256, 256)) \n",
-    "    image = np.transpose(image, (2, 0, 1))\n",
-    "    image = torch.tensor(image)\n",
-    "    image = image.unsqueeze(0)\n",
+    "    #image = cv2.resize(image, (256, 256)) \n",
+    "    #image = np.transpose(image, (2, 0, 1))\n",
+    "    #image = torch.tensor(image)\n",
+    "    #image = image.unsqueeze(0)\n",
     "\n",
     "    #print(image.shape)\n",
     "    #print(pil_im.shape)\n",
@@ -182,7 +183,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "root = \"/media/arg_ws3/5E703E3A703E18EB/data/mm_FCN/box_gan/image/\"\n",
+    "root = \"/media/arg_ws3/5E703E3A703E18EB/data/mm_FCN/box_gan_LAMDAID_1/image/\"\n",
     "image_root = \"/media/arg_ws3/5E703E3A703E18EB/data/mm_FCN/unity/image/\"\n",
     "mask_root = \"/media/arg_ws3/5E703E3A703E18EB/data/mm_FCN/unity/mask/\"\n",
     "box_root = \"/media/arg_ws3/5E703E3A703E18EB/data/mm_FCN/unity/box/\"\n",
@@ -197,11 +198,11 @@
    "source": [
     "for box in box_list:\n",
     "    mask_name = box.split('_original.png')[0] + '_seg.png'\n",
-    "    box_img = cv2.imread(os.path.join(box_root, box))\n",
-    "    matched = sample_images(box_img)\n",
+    "    #box_img = cv2.imread(os.path.join(box_root, box))\n",
+    "    matched = sample_images(os.path.join(box_root, box))\n",
     "    image = cv2.imread(os.path.join(image_root, box))\n",
     "    mask_img = cv2.imread(os.path.join(mask_root, mask_name), 0)\n",
-    "    mask_img[mask_img > 0] = 255\n",
+    "    mask_img[mask_img == 0] = 255\n",
     "    mask = cv2.cvtColor(mask_img, cv2.COLOR_GRAY2RGB)\n",
     "    matched = cv2.bitwise_and(matched, mask, mask=mask_img)\n",
     "    mask_img[mask_img < 255] = 1\n",
@@ -212,6 +213,13 @@
     "    result = cv2.add(matched, image)\n",
     "    cv2.imwrite(os.path.join(root, box), result)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
