2ch pix2pix instance

--- a/catkin_ws/src/jupyter/Create Mask and CSV file from LabelMe.ipynb
+++ b/catkin_ws/src/jupyter/Create Mask and CSV file from LabelMe.ipynb
@@ -24,7 +24,8 @@
     "WIDTH = 640\n",
     "HEIGHT = 480\n",
     "\n",
-    "product_list = set(['extinguisher', 'backpack', 'drill'])"
+    "#product_list = set(['extinguisher', 'backpack', 'drill'])\n",
+    "product_list = set(['barcode'])"
    ]
   },
   {
@@ -68,7 +69,7 @@
     "        if type(label_dict['annotation']['object']).__name__ != \"list\":\n",
     "            try:\n",
     "                object_ = label_dict['annotation']['object']\n",
-    "                if object_['name'] == \"extinguisher\" and object_['deleted'] == '0':\n",
+    "                '''if object_['name'] == \"extinguisher\" and object_['deleted'] == '0':\n",
     "                    poly_vertice = []\n",
     "                    for pts_idx in object_['polygon']['pt']:\n",
     "                        poly_vertice.append([int(pts_idx['x']), int(pts_idx['y'])])\n",
@@ -85,6 +86,12 @@
     "                    for pts_idx in object_['polygon']['pt']:\n",
     "                        poly_vertice.append([int(pts_idx['x']), int(pts_idx['y'])])\n",
     "                    poly_vertice = np.array(poly_vertice, np.int32)\n",
+    "                    cv2.fillConvexPoly(mask, poly_vertice, 3)'''\n",
+    "                if object_['name'] == \"barcode\" and object_['deleted'] == '0':\n",
+    "                    poly_vertice = []\n",
+    "                    for pts_idx in object_['polygon']['pt']:\n",
+    "                        poly_vertice.append([int(pts_idx['x']), int(pts_idx['y'])])\n",
+    "                    poly_vertice = np.array(poly_vertice, np.int32)\n",
     "                    cv2.fillConvexPoly(mask, poly_vertice, 3)\n",
     "            except Exception as e:\n",
     "                print (e)\n",
@@ -92,7 +99,7 @@
     "            try:\n",
     "                for object_ in label_dict['annotation']['object']:\n",
     "                    # print (object_['name'])\n",
-    "                    if object_['name'] == \"extinguisher\" and object_['deleted'] == '0':\n",
+    "                    '''if object_['name'] == \"extinguisher\" and object_['deleted'] == '0':\n",
     "                        poly_vertice = []\n",
     "                        for pts_idx in object_['polygon']['pt']:\n",
     "                            poly_vertice.append([int(pts_idx['x']), int(pts_idx['y'])])\n",
@@ -109,7 +116,13 @@
     "                        for pts_idx in object_['polygon']['pt']:\n",
     "                            poly_vertice.append([int(pts_idx['x']), int(pts_idx['y'])])\n",
     "                        poly_vertice = np.array(poly_vertice, np.int32)\n",
-    "                        cv2.fillConvexPoly(mask, poly_vertice, 3)\n",
+    "                        cv2.fillConvexPoly(mask, poly_vertice, 3)'''\n",
+    "                    if object_['name'] == \"barcode\" and object_['deleted'] == '0':\n",
+    "                        poly_vertice = []\n",
+    "                        for pts_idx in object_['polygon']['pt']:\n",
+    "                            poly_vertice.append([int(pts_idx['x']), int(pts_idx['y'])])\n",
+    "                        poly_vertice = np.array(poly_vertice, np.int32)\n",
+    "                        cv2.fillConvexPoly(mask, poly_vertice, 1)\n",
     "            except Exception as e:\n",
     "                print (e)\n",
     "    return mask"
@@ -120,6 +133,13 @@
    "metadata": {},
    "source": [
     "## Generate Mask"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### For SubT dataset"
    ]
   },
   {
@@ -145,6 +165,39 @@
     "            mask_path = os.path.join(mask_dir, mask_name)\n",
     "            mask = xml2mask(img_path)\n",
     "            cv2.imwrite(mask_path, mask,[int(cv2.IMWRITE_JPEG_QUALITY), 100])\n",
+    "            file_list.append([img_path[len(datapath):], mask_path[len(datapath):]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### For MM barcode dataset (UNDO)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datapath = \"/media/arg_ws3/5E703E3A703E18EB/data/mm_barcode/\"\n",
+    "bags = ['Images']\n",
+    "file_list = []\n",
+    "for bag in bags:\n",
+    "    path = os.path.join(datapath, bag, 'Annotations')\n",
+    "\n",
+    "    for (dirpath, dirnames, filenames) in os.walk(path):\n",
+    "        #print(filenames)\n",
+    "        for filename in filenames:\n",
+    "            mask_dir = dirpath.replace(\"Annotations\", \"Masks\")\n",
+    "            if not os.path.exists(mask_dir):\n",
+    "                os.makedirs(mask_dir)\n",
+    "            mask_name = filename.split(\".\")[0] + \".png\"\n",
+    "            img_path = os.path.join(dirpath, filename)\n",
+    "            mask_path = os.path.join(mask_dir, mask_name)\n",
+    "            #mask = xml2mask(img_path)\n",
+    "            #cv2.imwrite(mask_path, mask,[int(cv2.IMWRITE_JPEG_QUALITY), 100])\n",
     "            file_list.append([img_path[len(datapath):], mask_path[len(datapath):]])"
    ]
   },
