--- a/catkin_ws/src/jupyter/discriminator.ipynb
+++ b/catkin_ws/src/jupyter/discriminator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
        "torch.Size([1, 3, 240, 320])"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
        ")"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,16 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dis = d(item)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +224,37 @@
        "torch.Size([1, 1, 15, 20])"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out = d(item)\n",
+    "out.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dis = d(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 1, 15, 20])"
+      ]
+     },
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
