--- a/catkin_ws/src/jupyter/discriminator.ipynb
+++ b/catkin_ws/src/jupyter/discriminator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,6 +121,12 @@
     "                layers.append(nn.InstanceNorm2d(out_filters))\n",
     "            layers.append(nn.LeakyReLU(0.2, inplace=True))\n",
     "            return layers\n",
+    "        self.n1 = nn.Sequential(*discriminator_block(in_channels, 64, normalize=False))\n",
+    "        self.n2 = nn.Sequential(*discriminator_block(64, 128))\n",
+    "        self.n3 = nn.Sequential(*discriminator_block(128, 256))\n",
+    "        self.n4 = nn.Sequential(*discriminator_block(256, 512))\n",
+    "        self.n5 = nn.ZeroPad2d((1,0,1,0))\n",
+    "        self.n6 = nn.Conv2d(512, 1, 4, padding=1)\n",
     "\n",
     "        self.model = nn.Sequential(\n",
     "            *discriminator_block(in_channels, 64, normalize=False),\n",
@@ -132,12 +138,26 @@
     "        )\n",
     "\n",
     "    def forward(self, img):\n",
-    "        return self.model(img)"
+    "        print(img.shape)\n",
+    "        x = self.n1(img)\n",
+    "        print(x.shape)\n",
+    "        x = self.n2(x)\n",
+    "        print(x.shape)\n",
+    "        x = self.n3(x)\n",
+    "        print(x.shape)\n",
+    "        x = self.n4(x)\n",
+    "        print(x.shape)\n",
+    "        x = self.n5(x)\n",
+    "        print(x.shape)\n",
+    "        x = self.n6(x)\n",
+    "        print(x.shape)\n",
+    "        #return self.model(img)\n",
+    "        return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,24 +166,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([1, 3, 240, 320])"
+       "torch.Size([1, 3, 480, 640])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "img = Image.open(\"/home/arg_ws3/Pictures/Wallpapers/NickWang.jpg\")\n",
-    "img_height = 240\n",
-    "img_width = 320\n",
+    "img_height = 480\n",
+    "img_width = 640\n",
     "tfs = [ transforms.Resize((img_height, img_width), Image.BICUBIC),\n",
     "                #transforms.RandomCrop((img_height, img_width)),\n",
     "                #transforms.RandomHorizontalFlip(),\n",
@@ -179,13 +199,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Discriminator(\n",
+       "  (n1): Sequential(\n",
+       "    (0): Conv2d(3, 64, kernel_size=(4, 4), stride=(2, 2), padding=(1, 1))\n",
+       "    (1): LeakyReLU(negative_slope=0.2, inplace)\n",
+       "  )\n",
+       "  (n2): Sequential(\n",
+       "    (0): Conv2d(64, 128, kernel_size=(4, 4), stride=(2, 2), padding=(1, 1))\n",
+       "    (1): InstanceNorm2d(128, eps=1e-05, momentum=0.1, affine=False, track_running_stats=False)\n",
+       "    (2): LeakyReLU(negative_slope=0.2, inplace)\n",
+       "  )\n",
+       "  (n3): Sequential(\n",
+       "    (0): Conv2d(128, 256, kernel_size=(4, 4), stride=(2, 2), padding=(1, 1))\n",
+       "    (1): InstanceNorm2d(256, eps=1e-05, momentum=0.1, affine=False, track_running_stats=False)\n",
+       "    (2): LeakyReLU(negative_slope=0.2, inplace)\n",
+       "  )\n",
+       "  (n4): Sequential(\n",
+       "    (0): Conv2d(256, 512, kernel_size=(4, 4), stride=(2, 2), padding=(1, 1))\n",
+       "    (1): InstanceNorm2d(512, eps=1e-05, momentum=0.1, affine=False, track_running_stats=False)\n",
+       "    (2): LeakyReLU(negative_slope=0.2, inplace)\n",
+       "  )\n",
+       "  (n5): ZeroPad2d(padding=(1, 0, 1, 0), value=0.0)\n",
+       "  (n6): Conv2d(512, 1, kernel_size=(4, 4), stride=(1, 1), padding=(1, 1))\n",
        "  (model): Sequential(\n",
        "    (0): Conv2d(3, 64, kernel_size=(4, 4), stride=(2, 2), padding=(1, 1))\n",
        "    (1): LeakyReLU(negative_slope=0.2, inplace)\n",
@@ -204,7 +245,7 @@
        ")"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,16 +256,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 3, 480, 640])\n",
+      "torch.Size([1, 64, 240, 320])\n",
+      "torch.Size([1, 128, 120, 160])\n",
+      "torch.Size([1, 256, 60, 80])\n",
+      "torch.Size([1, 512, 30, 40])\n",
+      "torch.Size([1, 512, 31, 41])\n",
+      "torch.Size([1, 1, 30, 40])\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "torch.Size([1, 1, 15, 20])"
+       "torch.Size([1, 1, 30, 40])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
