create GAN sim2real dataset

--- a/catkin_ws/src/cyclegan/Create Box sim2real csv.ipynb
+++ b/catkin_ws/src/cyclegan/Create Box sim2real csv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,13 +14,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "root = \"/media/arg_ws3/5E703E3A703E18EB/data/mm_unity_new/\"\n",
-    "real_root = os.path.join(root, \"real_boxes\")\n",
-    "unity_root = os.path.join(root, \"unity_boxes\")"
+    "real_root = os.path.join(root, \"real_totes\")\n",
+    "unity_root = os.path.join(root, \"unity_totes\")"
    ]
   },
   {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,12 +68,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "createCSV(real_root, \"real_boxes\")\n",
-    "createCSV(unity_root, \"unity_boxes\")"
+    "createCSV(real_root, \"real_totes\")\n",
+    "createCSV(unity_root, \"unity_totes\")"
    ]
   },
   {
